--- a/Bootstrap/Bootstrap.html
+++ b/Bootstrap/Bootstrap.html
@@ -3,7 +3,7 @@
  
 <head>
     <meta charset="utf-8">
-    <title>Group 6 Bootstrap </title>
+    <title>Group 6 Bootstrap Webpage </title>
 </head>
  
 <body>
