--- a/Bootstrap/Bootstrap.html
+++ b/Bootstrap/Bootstrap.html
@@ -7,11 +7,14 @@
 </head>
  
 <body>
-    <header>
-        <h1>
-       
-        </h1>
-    </header>
+    <h2><u>Jaden Lopez</u></h2>
+
+    <h2><u>David Zhang</u></h2>
+
+    <h2><u>Itzetl Vixtha Teoba</u></h2>
+
+    <h2><u>Anirudh Rao</u></h2>
+    
 </body>
  
 </html>
