--- a/Bootstrap/Bootstrap.html
+++ b/Bootstrap/Bootstrap.html
@@ -7,6 +7,8 @@
 </head>
  
 <body>
+    <h1><u><center>Get To Know Group 6</center></u></h1>
+    
     <h2><u>Jaden Lopez</u></h2>
 
     <h2><u>David Zhang</u></h2>
@@ -14,7 +16,7 @@
     <h2><u>Itzetl Vixtha Teoba</u></h2>
 
     <h2><u>Anirudh Rao</u></h2>
-    
+
 </body>
  
 </html>
