--- a/Bootstrap/Bootstrap.html
+++ b/Bootstrap/Bootstrap.html
@@ -7,7 +7,7 @@
 </head>
  
 <body>
-    <h1><u><center>Get To Know Group 6</center></u></h1>
+    <h1><u><center>Group 6</center></u></h1>
     
     <h2><u>Jaden Lopez</u></h2>
 
