--- a/Bootstrap/Bootstrap.html
+++ b/Bootstrap/Bootstrap.html
@@ -13,24 +13,19 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#">WebSiteName</a>
+            <a class="navbar-brand" href="#">Group 6</a>
           </div>
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Page 1</a></li>
-            <li><a href="#">Page 2</a></li>
-            <li><a href="#">Page 3</a></li>
+            <li><a href="Jaden.html">Jaden</a></li>
+            <li><a href="#">David</a></li>
+            <li><a href="#">Itzetl</a></li>
+            <li><a href="#">Anirudh</a></li>
+
           </ul>
         </div>
       </nav>
     
-    <h2><u>Jaden Lopez</u></h2>
-
-    <h2><u>David Zhang</u></h2>
-
-    <h2><u>Itzetl Vixtha Teoba</u></h2>
-
-    <h2><u>Anirudh Rao</u></h2>
 
 </body>
  
