--- a/Bootstrap/Bootstrap.html
+++ b/Bootstrap/Bootstrap.html
@@ -16,7 +16,7 @@
             <a class="navbar-brand" href="#">Group 6</a>
           </div>
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="Bootstrap.html">Home</a></li>
             <li><a href="Jaden.html">Jaden</a></li>
             <li><a href="#">David</a></li>
             <li><a href="#">Itzetl</a></li>
