--- a/Bootstrap/Bootstrap.html
+++ b/Bootstrap/Bootstrap.html
@@ -18,7 +18,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="Bootstrap.html">Home</a></li>
             <li><a href="Jaden.html">Jaden</a></li>
-            <li><a href="#">David</a></li>
+            <li><a href="David.html">David</a></li>
             <li><a href="#">Itzetl</a></li>
             <li><a href="#">Anirudh</a></li>
 
