--- a/Bootstrap/Jaden.html
+++ b/Bootstrap/Jaden.html
@@ -14,19 +14,15 @@
                 <a class="navbar-brand" href="#">Group 6</a>
               </div>
               <ul class="nav navbar-nav">
-                <li><a href="Bootstrap.html">Home</a></li>
-                <li class="active"><a href="Jaden.html">Jaden</a></li>
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="Jaden.html">Jaden</a></li>
                 <li><a href="David.html">David</a></li>
-                <li><a href="">Itzetl</a></li>
+                <li><a href="#">Itzetl</a></li>
                 <li><a href="#">Anirudh</a></li>
     
               </ul>
             </div>
           </nav>
-
-          <h2>
-              Jaden
-          </h2>
 
     </body>
 </html>
