--- a/Bootstrap/Bootstrap.html
+++ b/Bootstrap/Bootstrap.html
@@ -10,7 +10,7 @@
 <body>
     <h1><u><center>Group 6</center></u></h1>
 
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-inverse">
         <div class="container-fluid">
           <div class="navbar-header">
             <a class="navbar-brand" href="#">Group 6</a>
@@ -25,6 +25,8 @@
           </ul>
         </div>
       </nav>
+
+      <h2><u>Group 6</u></h2>
     
 
 </body>
