--- a/Bootstrap/David.html
+++ b/Bootstrap/David.html
@@ -8,7 +8,7 @@
     <body>
         <h1><u><center>Group 6</center></u></h1>
 
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-inverse">
             <div class="container-fluid">
               <div class="navbar-header">
                 <a class="navbar-brand" href="#">Group 6</a>
