--- a/Bootstrap/Jaden.html
+++ b/Bootstrap/Jaden.html
@@ -17,7 +17,7 @@
                 <li><a href="Bootstrap.html">Home</a></li>
                 <li class="active"><a href="Jaden.html">Jaden</a></li>
                 <li><a href="David.html">David</a></li>
-                <li><a href="#">Itzetl</a></li>
+                <li><a href="itzetl.html">Itzetl</a></li>
                 <li><a href="#">Anirudh</a></li>
     
               </ul>
