--- a/Bootstrap/Jaden.html
+++ b/Bootstrap/Jaden.html
@@ -24,7 +24,11 @@
             </div>
           </nav>
 
-          <h2>Jaden</h2>
+          <div class="container">
+            <div class="jumbotron">
+              <h1>Jaden Lopez</h1>
+              
+          </div>
 
     </body>
 </html>
