--- a/Bootstrap/Bootstrap.html
+++ b/Bootstrap/Bootstrap.html
@@ -8,7 +8,9 @@
 </head>
  
 <body>
-    <h1><u><center>Group 6</center></u></h1>
+  <div class="page-header">
+    <h1><center>Group 6</center></h1>
+  </div>
 
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
@@ -19,7 +21,7 @@
             <li class="active"><a href="Bootstrap.html">Home</a></li>
             <li><a href="Jaden.html">Jaden</a></li>
             <li><a href="David.html">David</a></li>
-            <li><a href="#">Itzetl</a></li>
+            <li><a href="itzetl.html">Itzetl</a></li>
             <li><a href="#">Anirudh</a></li>
 
           </ul>
