--- a/Bootstrap/itzetl.html
+++ b/Bootstrap/itzetl.html
@@ -15,9 +15,9 @@
               </div>
               <ul class="nav navbar-nav">
                 <li><a href="Bootstrap.html">Home</a></li>
-                <li class="active"><a href="Jaden.html">Jaden</a></li>
+                <li><a href="Jaden.html">Jaden</a></li>
                 <li><a href="David.html">David</a></li>
-                <li><a href="Itzetl.html">Itzetl</a></li>
+                <li class="active"><a href="Itzetl.html">Itzetl</a></li>
                 <li><a href="#">Anirudh</a></li>
     
               </ul>
