--- a/Bootstrap/David.html
+++ b/Bootstrap/David.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <title>Group 6 Bootstrap Webpage </title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
     <body>
         <h1><u><center>Group 6</center></u></h1>
@@ -17,7 +19,7 @@
                 <li><a href="Bootstrap.html">Home</a></li>
                 <li><a href="Jaden.html">Jaden</a></li>
                 <li class="active"><a href="David.html">David</a></li>
-                <li><a href="#">Itzetl</a></li>
+                <li><a href="itzetl.html">Itzetl</a></li>
                 <li><a href="#">Anirudh</a></li>
     
               </ul>
