--- a/Bootstrap/Jaden.html
+++ b/Bootstrap/Jaden.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <title>Group 6 Bootstrap Webpage </title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
     <body>
         <h1><u><center>Group 6</center></u></h1>
@@ -26,9 +28,20 @@
 
           <div class="container">
             <div class="jumbotron">
-              <h1>Jaden Lopez</h1>
-              
+              <h1><center>Jaden Lopez</center></h1>
           </div>
+
+          <div class="container">
+
+            <h2>Bio</h2>
+            <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Click to open</button>
+            <div id="demo" class="collapse" style="color:Black ;">
+              Jaden
+            </div>
+
+          </div>
+
+          
 
     </body>
 </html>
