--- a/Bootstrap/Jaden.html
+++ b/Bootstrap/Jaden.html
@@ -36,11 +36,22 @@
 
             <h2>Bio</h2>
             <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Click to open</button>
-            <div id="demo" class="collapse" style="color:Black ;">
-              Jaden
-            </div>
-
+            <div id="demo" class="collapse" style="color:Black;">
+              <div class="well">Jaden Lopez is a student at the University of Washington Bothell. Jaden grew up in Bellingham Washington and loves to skateboard, eat good food, and play video games.
+              </div></div>
           </div>
+
+          <div class="container">
+
+            <h2>Favorite Food</h2>
+            <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#2">Click to open</button>
+            <div id="2" class="collapse" style="color:Black;">
+              <div class="well">
+                Jaden Lopez is a student at the University of Washington Bothell. Jaden grew up in Bellingham Washington and loves to skateboard, eat good food, and play video games.
+              </div>
+            </div>
+          </div>
+
 
           
 
