--- a/Bootstrap/itzetl.html
+++ b/Bootstrap/itzetl.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1><u><center>Group 6</center></u></h1>
-
+<!--Navagation Bar-->
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
               <div class="navbar-header">
@@ -23,8 +23,9 @@
               </ul>
             </div>
           </nav>
-
+<!-- Tittle Box -->
           <h2>ITZETL</h2>
 
     </body>
+<!--Images and Descriptions-->
 </html>
