--- a/Bootstrap/David.html
+++ b/Bootstrap/David.html
@@ -26,24 +26,25 @@
             </div>
           </nav>
           <div class="container-fluid">
-            <div class="jumbotron">
-<h1><center> <span style = "color:#1be7cc;">David</span></center></h1>
+            <div style="background-color: #0f217b;" class="jumbotron">
+<h1><center> <span style = " color:#1be7cc;">David</span></center></h1>
 </div>
 </div>
+<hr>
 <div class="container">
 
   <h2><span style = "color:#5a9c0e;">David's favorite things</span></h2>
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">You might want to see this</button>
+  <button style="background-color: #f3d00b; color: rgb(140, 20, 209);"type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">You might want to see this</button>
   <div id="demo" class="collapse"  style="background-color: aqua;color:rgb(77, 17, 168); ">
     <div class="well">David likes to play video games. He also enjoys making music in his spare time. He hopes that one day many people can hear his music.
     </div></div>
 </div>
-
+<hr>
 <div class="container">
 
   <h2><span style="color:#7c8410;">David's music</span></h2>
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#2">Here's David's music</button>
-  <div id="2" class="collapse" style="color:Black;">
+  <button style="background-color: #6d098f; color: rgb(209, 197, 20);" type="button" class="btn btn-info" data-toggle="collapse" data-target="#2">Here's David's music</button>
+  <div  id="2"  class="collapse" style="background-color: aqua;color:Black;">
     <div class="well">
       <div class="row">
         <h3>Music</h3>
