Started Anirudh page

--- a/Bootstrap/Jaden.html
+++ b/Bootstrap/Jaden.html
@@ -20,7 +20,7 @@
                 <li class="active"><a href="Jaden.html">Jaden</a></li>
                 <li><a href="David.html">David</a></li>
                 <li><a href="itzetl.html">Itzetl</a></li>
-                <li><a href="#">Anirudh</a></li>
+                <li><a href="Anirudh.html">Anirudh</a></li>
     
               </ul>
             </div>
