--- a/Bootstrap/itzetl.html
+++ b/Bootstrap/itzetl.html
@@ -20,7 +20,7 @@
                 <li><a href="Jaden.html">Jaden</a></li>
                 <li><a href="David.html">David</a></li>
                 <li class="active"><a href="Itzetl.html">Itzetl</a></li>
-                <li><a href="#">Anirudh</a></li>
+                <li><a href="Anirudh.html">Anirudh</a></li>
     
               </ul>
             </div>
