More stuff to my section

--- a/Bootstrap/Jaden.html
+++ b/Bootstrap/Jaden.html
@@ -68,7 +68,10 @@
             <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#3">Click to open</button>
             <div id="3" class="collapse" style="color:Black;">
               <div class="well">
-                Jaden Lopez is a student at the University of Washington Bothell. Jaden grew up in Bellingham Washington and loves to skateboard, eat good food, and play video games.
+                <div class="row">
+                  <h3>One Piece</h3>
+                <img src="Anime1.jpg" alt="One Piece" width="200" height="300">
+                </div>
               </div>
             </div>
           </div>
