--- a/Bootstrap/itzetl.html
+++ b/Bootstrap/itzetl.html
@@ -20,14 +20,23 @@
                 <li><a href="Jaden.html">Jaden</a></li>
                 <li><a href="David.html">David</a></li>
                 <li class="active"><a href="Itzetl.html">Itzetl</a></li>
-                <li><a href="Anirudh.html">Anirudh</a></li>
+                <li><a href="#">Anirudh</a></li>
     
               </ul>
             </div>
           </nav>
 <!-- Tittle Box -->
-          <h2>ITZETL</h2>
+<div class="container-fluid">
+  <div style ="background-color:pink;" class ="jumbotron">
+  <h1><center> <span style ="color:yellow;">ITZETL VIXTHA</span></center></h1>
+  </div>
+</div>
+<!--Trip Images-->
+<div class ="container">
+<button type = "button" class="btn btn-outline-trips">TRIPS</button>
+</div>
+
+
 
     </body>
-<!--Images and Descriptions-->
 </html>
