--- a/Bootstrap/itzetl.html
+++ b/Bootstrap/itzetl.html
@@ -27,13 +27,15 @@
           </nav>
 <!-- Tittle Box -->
 <div class="container-fluid">
-  <div style ="background-color:pink;" class ="jumbotron">
-  <h1><center> <span style ="color:yellow;">ITZETL VIXTHA</span></center></h1>
+  <div style ="background-color:#95f985;" class ="jumbotron">
+  <h1><center> <span style ="color:pink;">ITZETL VIXTHA</span></center></h1>
   </div>
 </div>
 <!--Trip Images-->
-<div class ="container">
-<button type = "button" class="btn btn-outline-trips">TRIPS</button>
+<div class ="text-center">
+<h2><span style ="color: lightskyblue;">Favorite Trip Images</span></h2>
+<button type="button" class="btn btn-outline-info">TRIPS</button>
+
 </div>
 
 
