--- a/Bootstrap/itzetl.html
+++ b/Bootstrap/itzetl.html
@@ -34,8 +34,15 @@
 <!--Trip Images-->
 <div class ="text-center">
 <h2><span style ="color: lightskyblue;">Favorite Trip Images</span></h2>
-<button type="button" class="btn btn-outline-info">TRIPS</button>
-
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="three">TRIPS</button>
+<div id= "three" class = "collapse">
+  <div class ="well">
+    <div class ="row">
+      <h3>Yellowstone</h3>
+      <img src="">
+    </div>
+  </div>
+</div>
 </div>
 
 
