--- a/Bootstrap/itzetl.html
+++ b/Bootstrap/itzetl.html
@@ -43,7 +43,8 @@
     </div>
 
     <div class="row">
-    <h3></h3>
+    <h3>PR</h3>
+    <img src="" alt="2019" height="100" weight="100">
     </div>
   </div>
 </div>
