--- a/Bootstrap/itzetl.html
+++ b/Bootstrap/itzetl.html
@@ -35,7 +35,7 @@
 <div class ="text-center">
 <h2><span style ="color: lightskyblue;">Favorite Trip Images</span></h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="three">TRIPS</button>
-<div id= "three" class = "collapse">
+<div id= "three" class = "collapse" style="color:white;">
   <div class ="well">
     <div class ="row">
       <h3>Yellowstone</h3>
@@ -44,7 +44,7 @@
 
     <div class="row">
     <h3>PR</h3>
-    <img src="" alt="2019" height="100" weight="100">
+   
     </div>
   </div>
 </div>
