--- a/Bootstrap/itzetl.html
+++ b/Bootstrap/itzetl.html
@@ -33,23 +33,36 @@
 </div>
 <!--Trip Images-->
 <div class ="text-center">
-<h2><span style ="color: lightskyblue;">Favorite Trip Images</span></h2>
+<h2><span style ="color: lightskyblue;">Favorite Trips</span></h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="three">TRIPS</button>
-<div id= "three" class = "collapse" style="color:white;">
-  <div class ="well">
+  <div id= "three" class = "collapse" style="color:white;">
+    <div class ="well">
     <div class ="row">
       <h3>Yellowstone</h3>
       <img src="IVYellowstone.jpg" alt ="2021" height="100" width="100">
     </div>
 
     <div class="row">
-    <h3>PR</h3>
-   
+    <h3>Puerto Rico</h3>
+    <img src="IVPR.jpg" alt="2019" height="100" width="100">
     </div>
+
+   </div>
   </div>
 </div>
+<hr>
+<div class ="text-center">
+  <h2><span style ="color:lightblue;">Favorite Album Covers</span></h2>
+  <button type="button" class="btn-info" data-toggle="collapse" data-target="two">MUSIC</button>
+    <div id="two" class="collapse" style="color:white">
+      <div class="well">
+        <div class="row">
+          <h3>1of1 - Sech</h3>
+          <img src="IV1of1.jpg" alt="Sech" height="100" width="100">
+        </div>
+      </div>
+    </div>
 </div>
-
 
 
     </body>
