Added Images to Repo

--- a/Bootstrap/Anirudh.html
+++ b/Bootstrap/Anirudh.html
@@ -34,7 +34,20 @@
 
         <hr>
         <div class = "container">
-            
+            <h2><center><span style = "color:darkslateblue;">Anirudh's Artwork</span></center></h2>
+            <button style = "background-color: darkblue; color:darkcyan;"
+                type = "button" class = "btn btn-info"
+                data-toggle = "collapse" data-target = "#2">
+                Recent Artwork by Ani:
+            </button>
+            <div id = "2" class = "collapse" style = "background-color: darkgray;">
+                <div class = "well">
+                    <div class = "row">
+                        <h3>Artwork</h3>
+                        
+                    </div>
+                </div>
+            </div>
         </div>
 
 </html>
