Fixed Taskbar issues: Fixed Image issues

--- a/Bootstrap/Anirudh.html
+++ b/Bootstrap/Anirudh.html
@@ -44,7 +44,15 @@
                 <div class = "well">
                     <div class = "row">
                         <h3>Artwork</h3>
-                        
+                        <div>
+                            <a href = "MonkCharacter.png" title = "[D&D OC] Irrfan">Irrfan [D&D OC]</a>
+                        </div>
+                        <div>
+                        <a href = "Reducto.png" title = "Harvey Birdman: Reducto">Harvey Birdman: Reducto</a>
+                        </div>
+                        <div>
+                        <a href = "Vakama.png" title = "Bionicle: Vakama">Bionicle: Vakama</a>
+                        </div>
                     </div>
                 </div>
             </div>
