--- a/Bootstrap/itzetl.html
+++ b/Bootstrap/itzetl.html
@@ -27,16 +27,18 @@
           </nav>
 <!-- Tittle Box -->
 <div class="container-fluid">
-  <div style ="background-color:#95f985;" class ="jumbotron">
+  <div style ="background-color:rgb(236, 236, 131);" class ="jumbotron">
   <h1><center> <span style ="color:pink;">ITZETL VIXTHA</span></center></h1>
   </div>
 </div>
 <!--Trip Images-->
-<div class ="text-center">
+<div class ="container">
 <h2><span style ="color: lightskyblue;">Favorite Trips</span></h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="three">TRIPS</button>
-  <div id= "three" class = "collapse" style="color:white;">
-    <div class ="well">
+
+<button type="button" class="btn btn-info" data-toggle ="collapse" data-target="#2">TRIPS
+</button>
+  <div id= "#2" class = "collapse" style="color:white;">
+   <div class ="well">
     <div class ="row">
       <h3>Yellowstone</h3>
       <img src="IVYellowstone.jpg" alt ="2021" height="100" width="100">
@@ -51,7 +53,7 @@
   </div>
 </div>
 <hr>
-<div class ="text-center">
+<div class ="container">
   <h2><span style ="color:lightblue;">Favorite Album Covers</span></h2>
   <button type="button" class="btn-info" data-toggle="collapse" data-target="two">MUSIC</button>
     <div id="two" class="collapse" style="color:white">
