--- a/Bootstrap/itzetl.html
+++ b/Bootstrap/itzetl.html
@@ -32,7 +32,7 @@
   </div>
 </div>
 <!--Trip Images-->
-<div class ="container">
+<div class ="text-center">
 <h2><span style ="color: lightskyblue;">Favorite Trips</span></h2>
 
 <button type="button" class="btn btn-info" data-toggle ="collapse" data-target="#2">TRIPS
@@ -53,10 +53,12 @@
   </div>
 </div>
 <hr>
-<div class ="container">
+<!--Album Covers-->
+<div class ="text-center">
   <h2><span style ="color:lightblue;">Favorite Album Covers</span></h2>
-  <button type="button" class="btn-info" data-toggle="collapse" data-target="two">MUSIC</button>
-    <div id="two" class="collapse" style="color:white">
+
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#1">MUSIC</button>
+    <div id="#1" class="collapse" style="color:white">
       <div class="well">
         <div class="row">
           <h3>1of1 - Sech</h3>
