--- a/Bootstrap/itzetl.html
+++ b/Bootstrap/itzetl.html
@@ -35,34 +35,34 @@
 <div class ="text-center">
 <h2><span style ="color: lightskyblue;">Favorite Trips</span></h2>
 
-<button type="button" class="btn btn-info" data-toggle ="collapse" data-target="#2">TRIPS
-</button>
-  <div id= "#2" class = "collapse" style="color:white;">
-   <div class ="well">
-    <div class ="row">
-      <h3>Yellowstone</h3>
-      <img src="IVYellowstone.jpg" alt ="2021" height="100" width="100">
-    </div>
+<button type="button" class="btn btn-info" data-toggle ="collapse" data-target="#2">TRIPS</button>
+  <div id= "2" class = "collapse" style="color:white;">
+    <div class ="well">
+      <div class ="row">
+       <h3>Yellowstone</h3>
+       <img src="IVYellowstone.jpg" alt ="2021" height="300" width="300">
+     </div>
 
-    <div class="row">
-    <h3>Puerto Rico</h3>
-    <img src="IVPR.jpg" alt="2019" height="100" width="100">
-    </div>
-
+     <div class="row">
+      <h3>Puerto Rico</h3>
+      <img src="IVPR.jpg" alt="2019" height="300" width="300">
+     </div>
    </div>
   </div>
 </div>
 <hr>
+
+
 <!--Album Covers-->
 <div class ="text-center">
   <h2><span style ="color:lightblue;">Favorite Album Covers</span></h2>
 
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#1">MUSIC</button>
-    <div id="#1" class="collapse" style="color:white">
+    <div id="1" class="collapse" style="color:white">
       <div class="well">
         <div class="row">
-          <h3>1of1 - Sech</h3>
-          <img src="IV1of1.jpg" alt="Sech" height="100" width="100">
+          <h2>1of1 - Sech</h2>
+          <img src="IV1of1.jpg" alt="Sech" height="300" width="300">
         </div>
       </div>
     </div>
