--- a/Bootstrap/David.html
+++ b/Bootstrap/David.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Group 6 Bootstrap Webpage </title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="David.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
@@ -26,7 +27,7 @@
             </div>
           </nav>
           <div class="container-fluid">
-            <div style="background-color: #0f217b;" class="jumbotron">
+            <div style="background-color: #0f7b7b;" class="jumbotron">
 <h1><center> <span style = " color:#1be7cc;">David</span></center></h1>
 </div>
 </div>
@@ -61,7 +62,29 @@
   </div>
 </div>
 
+<div class="container">
+  <h1>David's favorite pictures </h1>
 
+      <div class="text-center">
+        <img src="545dfa169a5a4502f5a719280835b6a.jpg" alt="One" width="500" height="500">
+      </div>
+    </div>
+      <div class="text-center">
+        <img src="picdav.jpg" alt="One" width="800" height="500">
+      </div>
+    </div>
+  
+  </div>
+</div>
+
+<div class="container">
+  <h2>personal contact information</h2>
+
+    <div class="p-2 flex-fill bg-info">zhaoxuanzhang1@gmail.com</div>
+    <div class="p-2 flex-fill bg-warning">dzofi.com</div>
+
+  </div>
+</div>
 
     </body>
 </html>
