--- a/Bootstrap/Jaden.html
+++ b/Bootstrap/Jaden.html
@@ -30,10 +30,10 @@
       <a class="nav-link" href="David.html">David</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link disabled" href="itzetl.html">Itzetl</a>
+      <a class="nav-link" href="itzetl.html">Itzetl</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link disabled" href="Anirudh.html">Anirudh</a>
+      <a class="nav-link" href="Anirudh.html">Anirudh</a>
     </li>
   </ul>
 </nav>
